syntax = "proto3";

package silenteight.agent.geo.v1.api;

import public "silenteight/agent/geo/v1/api/common.proto";

option java_package = "com.silenteight.proto.agent.geo.v1.api";
option java_outer_classname = "GeoLocationAgentApiProto";
option java_multiple_files = true;

service GeoLocationAgent {

  rpc CompareLocations (CompareLocationsRequest) returns (CompareLocationsResponse) {
  }

  rpc BatchCompareLocations (BatchCompareLocationsRequest) returns (BatchCompareLocationsResponse) {
  }
}

message BatchCompareLocationsRequest {
  repeated CompareLocationsRequest requests = 1;
}

message BatchCompareLocationsResponse {
  repeated CompareLocationsResponse responses = 1;
}

message CompareLocationsRequest {
  string alerted_party_location = 1;
  string watchlist_party_location = 2;
}

message CompareLocationsResponse {
  string solution = 1;
  GeoComparerReason reason = 2;
  IdentifiedLocations identified_inputs = 3;
}

message IdentifiedLocations {
  repeated IdentifiedLocation alerted_party_identified_locations = 1;
  repeated IdentifiedLocation watchlist_party_identified_locations = 2;
}
